# regengine_codex_workspace

./: .gitignore  AGENTS.md  AUTOPILOT_TASKS.md  DEPLOYMENT_PROFILES.md  DESIGN_PARTNER_DEMO_SCRIPT.md  PROMPT_FOR_CODEX.md  README.md  RELEASE_CHECKLIST.md  pyproject.toml  requirements.txt
.agents/skills/regengine-api-contract/: SKILL.md
.agents/skills/regengine-api-contract/references/: contract.md
.codex/: config.toml
.github/codex/prompts/: autobuild.md
.github/workflows/: ci.yml  codex-autopilot.yml
app/: controller.py  engine.py  epcis_export.py  fda_export.py  main.py  mock_service.py  models.py  regengine_client.py  store.py
app/static/: app.js  index.html  styles.css
docs/: HMAC_STAGING_VALIDATION.md
scripts/: browser_smoke.py
tests/: test_api.py  test_engine.py
